[package]
name = "backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-websocket-cdk = "0.3.1"
candid = "0.9.3"
ic-cdk = "0.11.3"

ic-cdk-macros = "0.8.1"
serde_cbor = "0.11.2"

ic-cdk-timers = "0.5.1"
serde = { version = "1.0.176", features = ["derive"] }
dotenv = "0.15.0"
ic-stable-structures = "0.6.1"




[dev-dependencies]
#pocket-ic = "2.0.1"
#rand = "0.8.5"
#ring = "0.17.1"