[package]
name = "backend"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-websocket-cdk = "0.3.1"
candid = "0.10.4"  # Updated version
ic-cdk = "0.14.1"  # Updated version
ic-cdk-macros = "0.8.1"
serde_cbor = "0.11.2"
ic-cdk-timers = "0.10.0"  # Updated version
serde = { version = "1.0.176", features = ["derive"] }
dotenv = "0.15.0"
b3_utils = "0.8.0"
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-crypto-extended-bip32" }
ic-crypto-ecdsa-secp256k1 = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-crypto-ecdsa-secp256k1" }
ic-crypto-sha3 = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-crypto-sha3" }
ic-ethereum-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-06-26_23-01-base", package = "ic-ethereum-types" }
evm-rpc-canister-types = "3.0.0"
alloy-primitives = "0.8.8"
alloy-consensus = "0.5.2"
alloy-eips = "0.5.2"
ic-stable-structures = "0.6.5"
getrandom = { version = "0.2.15", features = ["js"] }  # Enable "js" feature
serde_json = "1.0.132"
num = "0.4.3"
serde_bytes = "0.11.15"


[dev-dependencies]
#pocket-ic = "2.0.1"
#rand = "0.8.5"
#ring = "0.17.1"
