[package]
name = "user_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-websocket-cdk = "0.3.1"
candid = "0.9.3"
ic-cdk = "0.11.3"

ic-cdk-macros = "0.8.1"
serde = "1.0.176"
serde_cbor = "0.11.2"